postgresql-common (55) unstable; urgency=low

  * Add missing procps dependency to p-common. Closes: #369768

 -- Martin Pitt <mpitt@debian.org>  Thu,  1 Jun 2006 10:54:27 +0200

postgresql-common (54) unstable; urgency=low

  * pg_wrapper: Support specifying remote clusters with $PGCLUSTER, --cluster,
    user_clusters, and ~/.postgresqlrc with 'host:[port]' as cluster name.
    Closes: #340162
  * t/090_multicluster.t: Add tests for above feature.
  * user_clusters.5, postgresqlrc.5: Document format for remote clusters.
  * debian/supported-versions:
    - Also recognize Ubuntu dapper version number '6.06LTS'.
    - Fix bashism: 'type -p' -> type.
  * debian/control: Have p-common always depend on the recent p-client-common,
    since the latter ships PgCommon.pm. If the library is out of date, this
    can break operations horribly. Closes: #369289
  * Add Dutch debconf translation, thanks to Vincent Zweije
    <zweije@xs4all.nl>! Closes: #369237
  * t/TestLib.pm: If the test suite is called with FAILURE=shell environment,
    spawn bash before continuing. This makes it easier to debug obscure
    failures.
  * t/TestLib.pm, check_clean(): Check that PostgreSQL TCP sockets are closed.
    Adapt number of tests in all t/*.t.
  * t/090_multicluster.t: Just before checking for cleanness, wait until all
    TIME_WAIT sockets on the server ports went away, so that the following
    tests will not stumble over them. This seems to be a 7.4 server bug which
    is fixed in 8.1 at least.
  * t/050_encodings.t: Add tests for recent SQL injection vulnerabilities
    through invalidly encoded strings and usage of \' escaping.

 -- Martin Pitt <mpitt@debian.org>  Tue, 30 May 2006 00:59:57 +0200

postgresql-common (53) unstable; urgency=medium

  * Urgency medium since this fixes a quite serious bug; no intrusive changes
    otherwise.
  * Add Russian debconf translation, thanks to Yuriy Talakan'
    <yt@amur.elektra.ru>! Closes: #367152